[package]
name = "smugglex"
version = "0.2.0"
edition = "2024"
authors = ["hahwul"]
description = "HTTP Request Smuggling"
license = "MIT"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
url = "2.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "1.0"
chrono = "0.4"
futures = "0.3"
